Controller fix Swagger-re
